--- a/dashboard/templates/dashboard/showmenu.html
+++ b/dashboard/templates/dashboard/showmenu.html
@@ -17,6 +17,19 @@
     <link href={% static "css/light-bootstrap-dashboard.css" %} rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href={% static "css/demo.css" %} rel="stylesheet" />
+    <style>
+        .nc-simple-add:hover{
+            cursor: pointer;
+        }
+      .trans {
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
+    </style>
 </head>
 
 <body>
@@ -41,27 +54,21 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./user.html">
-                            <i class="nc-icon nc-circle-09"></i>
-                            <p>User Profile</p>
+                        <a class="nav-link active" href="./user.html">
+                            <i class="nc-icon nc-notes"></i>
+                            <p>Order</p>
                         </a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="../viewstartup">
-                            <i class="nc-icon nc-notes"></i>
-                            <p>View Startups</p>
+                            <i class="nc-icon nc-paper-2"></i>
+                            <p>Previous Order</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="./typography.html">
-                            <i class="nc-icon nc-paper-2"></i>
-                            <p>Create Startup</p>
-                        </a>
-                    </li> 
-                    <li>
-                        <a class="nav-link" href="./notifications.html">
-                            <i class="nc-icon nc-bell-55"></i>
-                            <p>Notifications</p>
+                            <i class="nc-icon nc-circle-09"></i>
+                            <p>User Profile</p>
                         </a>
                     </li>
                 </ul>
@@ -116,7 +123,7 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
+                                <a class="nav-link" href="{% url 'logout' %}">
                                     <span class="no-icon">Log out</span>
                                 </a>
                             </li>
@@ -125,55 +132,47 @@
                 </div>
             </nav>
             <!-- End Navbar -->
+            <!-- {% for startups in Menudetails %}
+            {% with name=startups.Menu_start_up_name %}
+            {% endwith %}{% endfor %} -->
+            <div class="text-center">
+            <h3 class="section-heading h3 mt-0"  style="padding: 10px;">{{ Menudetails.0.Menu_start_up_name  }}</h3>
+
+            </div>
+            <form name="" method="post">
+              {% csrf_token %}
             <div class="content">
                 <div class="container-fluid">
                     <div class="row">
-                            {% if startups_list %}
-    <ul style="width: 100%">
-
-      {% for startups in startups_list %}
-      <li>
-        <!--Accordion wrapper-->
-        <div class="accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-
-            <!-- Accordion card -->
-             <div class="card">
-
-                    <!-- Card header -->
-                    <div class="card-header" role="tab" id="headingTwo" >
-                        <a  class="collapsed" data-toggle="collapse" href="#{{ startups.start_up_name }}" aria-expanded="false" aria-controls="{{ startups.start_up_name }}">
-                            <h5 class=" col-md-8" style="margin: 0px; ">
-                                 {{ startups.start_up_name }} <i class="fa fa-angle-down rotate-icon"></i>
-                            </h5>
-                        </a>
-                        <button type="button" style="margin-bottom:10px;" class="btn btn-info btn-rounded float-right position-absolute">Join</button>
+                        <!--  -->
+                        {% if Menudetails %}
+                        {% for startups in Menudetails %}
+                <ul class="list-group" style="width: 100%;list-style-type: none;">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                         <img class="img-fluid " src="https://smedia2.intoday.in/aajtak/images/stories/112016/sabji-pakwangali_520_051017034930.jpg" alt="Card image cap" style="width: 5%">
+                         <h5 class=" col-md-8" style="margin: 0px;">
+                           {{ startups.Menu_start_up_item }}
+                         </h5>
+                         <h5 class=" col-md-2" style="margin: 0px;">
+                           Rs.{{ startups.Menu_start_up_item_price }}
+                         </h5>
+                        <span class="badge badge-primary badge-pill">
+                        <a class="trans" href="{% url 'userorder' %}?item={{ startups.Menu_start_up_item }}"  name="{{ startups.Menu_start_up_item }}">
+                          <i class="nc-icon nc-simple-add"></i>
+                        </a></span>
+                    </li>
+                </ul>
+                {% endfor %}
+                        <!--  -->
                     </div>
-
-                    <!-- Card body -->
-                    <div id="{{ startups.start_up_name }}" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordionEx" >
-                        <div class="card-body">
-                            {{startups.start_up_description}}
-                        </div>
                     </div>
                 </div>
-            <!-- Accordion card -->
 
-
-
-            <!-- Accordion card -->
-        </div>
-    </li>
-    {% endfor %}
-        <!--/.Accordion wrapper-->
-    <ul>
-
-    </ul>
-    {% else %}
-      <p>There are no Startup in the library.</p>
-    {% endif %}
-                    </div>
-                </div>
+                {% else %}
+                  <p>There are no Startup in the library.</p>
+                {% endif %}
             </div>
+          </form>
             <footer class="footer">
                 <div class="container">
                     <nav>
@@ -199,7 +198,7 @@
                             <script>
                                 document.write(new Date().getFullYear())
                             </script>
-                            <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+
                         </p>
                     </nav>
                 </div>
@@ -214,7 +213,7 @@
         </a>
 
         <ul class="dropdown-menu">
-			<li class="header-title"> Sidebar Style</li>
+            <li class="header-title"> Sidebar Style</li>
             <li class="adjustments-line">
                 <a href="javascript:void(0)" class="switch-trigger">
                     <p>Background Image</p>
@@ -278,7 +277,7 @@
             <li class="header-title" id="sharrreTitle">Thank you for sharing!</li>
 
             <li class="button-container">
-				<button id="twitter" class="btn btn-social btn-outline btn-twitter btn-round sharrre"><i class="fa fa-twitter"></i> · 256</button>
+                <button id="twitter" class="btn btn-social btn-outline btn-twitter btn-round sharrre"><i class="fa fa-twitter"></i> · 256</button>
                 <button id="facebook" class="btn btn-social btn-outline btn-facebook btn-round sharrre"><i class="fa fa-facebook-square"></i> · 426</button>
             </li>
         </ul>
