--- a/dashboard/templates/dashboard/viewallstart.html
+++ b/dashboard/templates/dashboard/viewallstart.html
@@ -41,27 +41,21 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./user.html">
-                            <i class="nc-icon nc-circle-09"></i>
-                            <p>User Profile</p>
+                        <a class="nav-link active" href="./user.html">
+                            <i class="nc-icon nc-notes"></i>
+                            <p>Order</p>
                         </a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="../viewstartup">
-                            <i class="nc-icon nc-notes"></i>
-                            <p>View Startups</p>
+                            <i class="nc-icon nc-paper-2"></i>
+                            <p>Previous Order</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="./typography.html">
-                            <i class="nc-icon nc-paper-2"></i>
-                            <p>Create Startup</p>
-                        </a>
-                    </li> 
-                    <li>
-                        <a class="nav-link" href="./notifications.html">
-                            <i class="nc-icon nc-bell-55"></i>
-                            <p>Notifications</p>
+                            <i class="nc-icon nc-circle-09"></i>
+                            <p>User Profile</p>
                         </a>
                     </li>
                 </ul>
@@ -128,8 +122,8 @@
             <div class="content">
                 <div class="container-fluid">
                     <div class="row">
-                            {% if startups_list %}
-    <ul style="width: 100%">
+                        {% if startups_list %}
+    <ul style="width: 100%;list-style-type: none;">
 
       {% for startups in startups_list %}
       <li>
@@ -140,37 +134,37 @@
              <div class="card">
 
                     <!-- Card header -->
+                    <form class="" action="" method="post">
                     <div class="card-header" role="tab" id="headingTwo" >
-                        <a  class="collapsed" data-toggle="collapse" href="#{{ startups.start_up_name }}" aria-expanded="false" aria-controls="{{ startups.start_up_name }}">
                             <h5 class=" col-md-8" style="margin: 0px; ">
-                                 {{ startups.start_up_name }} <i class="fa fa-angle-down rotate-icon"></i>
+                              <a href="{% url 'showmenu' %}?start_up={{ startups }}" >
+                               {{ startups.start_up_name }} <i class="fa fa-angle-down rotate-icon"></i>
+                               </a>
                             </h5>
-                        </a>
-                        <button type="button" style="margin-bottom:10px;" class="btn btn-info btn-rounded float-right position-absolute">Join</button>
+                        <button type="button" class="btn btn-info btn-rounded float-right position-absolute" >View Menu</button>
                     </div>
-
+                  </form>
                     <!-- Card body -->
                     <div id="{{ startups.start_up_name }}" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordionEx" >
-                        <div class="card-body">
-                            {{startups.start_up_description}}
+                            <div class="card-body">
+                                Location
+                            </div>
                         </div>
                     </div>
-                </div>
-            <!-- Accordion card -->
+                                <!-- Accordion card -->
 
 
 
-            <!-- Accordion card -->
-        </div>
-    </li>
-    {% endfor %}
-        <!--/.Accordion wrapper-->
-    <ul>
+                                <!-- Accordion card -->
+                            </div>
+                        </li>
+                        {% endfor %}
+                            <!--/.Accordion wrapper-->
 
-    </ul>
-    {% else %}
-      <p>There are no Startup in the library.</p>
-    {% endif %}
+                        </ul>
+                        {% else %}
+                          <p>There are no Startup in the library.</p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -199,7 +193,7 @@
                             <script>
                                 document.write(new Date().getFullYear())
                             </script>
-                            <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+
                         </p>
                     </nav>
                 </div>
@@ -214,7 +208,7 @@
         </a>
 
         <ul class="dropdown-menu">
-			<li class="header-title"> Sidebar Style</li>
+            <li class="header-title"> Sidebar Style</li>
             <li class="adjustments-line">
                 <a href="javascript:void(0)" class="switch-trigger">
                     <p>Background Image</p>
@@ -278,7 +272,7 @@
             <li class="header-title" id="sharrreTitle">Thank you for sharing!</li>
 
             <li class="button-container">
-				<button id="twitter" class="btn btn-social btn-outline btn-twitter btn-round sharrre"><i class="fa fa-twitter"></i> · 256</button>
+                <button id="twitter" class="btn btn-social btn-outline btn-twitter btn-round sharrre"><i class="fa fa-twitter"></i> · 256</button>
                 <button id="facebook" class="btn btn-social btn-outline btn-facebook btn-round sharrre"><i class="fa fa-facebook-square"></i> · 426</button>
             </li>
         </ul>
